<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/interval"
            android:layout_marginTop="40dp"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="center_vertical"
            android:text="@string/defaultInterval"
            android:hint="@string/defaultInterval" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_not_relay"
                android:onClick="buttonClicked"
                android:id="@+id/buttonEnable"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_not_relay"
                android:onClick="buttonClicked"
                android:id="@+id/buttonDisable"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:onClick="buttonClicked"
                android:id="@+id/buttonTest"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
